--- a/index.html
+++ b/index.html
@@ -2,14 +2,28 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab&display=swap"
 			rel="stylesheet" />
-		<title>iPrefer</title>
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="./src/assets/favicon/apple-touch-icon.png" />
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="./src/assets/favicon/favicon-32x32.png" />
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="./src/assets/favicon/favicon-16x16.png" />
+		<link rel="manifest" href="./src/assets/favicon/site.webmanifest" />
+		<title>iPrefer | Matthew Chhay</title>
 	</head>
 	<body>
 		<div id="root"></div>
