--- a/index.html
+++ b/index.html
@@ -23,7 +23,38 @@
 			sizes="16x16"
 			href="./src/assets/favicon/favicon-16x16.png" />
 		<link rel="manifest" href="./src/assets/favicon/site.webmanifest" />
-		<title>iPrefer | Matthew Chhay</title>
+		<!-- Primary Meta Tags -->
+		<title>iPrefer - Simplify your choices</title>
+		<meta name="title" content="iPrefer - Simplify your choices" />
+		<meta
+			name="description"
+			content="Easily compare options and make your choice with iPrefer." />
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta
+			property="og:url"
+			content="https://chhaymatt.github.io/iPrefer/" />
+		<meta property="og:title" content="iPrefer - Simplify your choices" />
+		<meta
+			property="og:description"
+			content="Easily compare options and make your choice with iPrefer." />
+		<meta property="og:image" content="https://i.imgur.com/kRyTJvI.png" />
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta
+			property="twitter:url"
+			content="https://chhaymatt.github.io/iPrefer/" />
+		<meta
+			property="twitter:title"
+			content="iPrefer - Simplify your choices" />
+		<meta
+			property="twitter:description"
+			content="Easily compare options and make your choice with iPrefer." />
+		<meta
+			property="twitter:image"
+			content="https://i.imgur.com/kRyTJvI.png" />
 	</head>
 	<body>
 		<div id="root"></div>
