--- a/index.html
+++ b/index.html
@@ -1,63 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab&display=swap"
-			rel="stylesheet" />
-		<link
-			rel="apple-touch-icon"
-			sizes="180x180"
-			href="./src/assets/favicon/apple-touch-icon.png" />
-		<link
-			rel="icon"
-			type="image/png"
-			sizes="32x32"
-			href="./src/assets/favicon/favicon-32x32.png" />
-		<link
-			rel="icon"
-			type="image/png"
-			sizes="16x16"
-			href="./src/assets/favicon/favicon-16x16.png" />
-		<link rel="manifest" href="./src/assets/favicon/site.webmanifest" />
-		<!-- Primary Meta Tags -->
-		<title>iPrefer - Simplify your choices</title>
-		<meta name="title" content="iPrefer - Simplify your choices" />
-		<meta
-			name="description"
-			content="Easily compare options and make your choice with iPrefer." />
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab&display=swap"
+            rel="stylesheet"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="./src/assets/favicon/apple-touch-icon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="./src/assets/favicon/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="./src/assets/favicon/favicon-16x16.png"
+        />
+        <link rel="manifest" href="./src/assets/favicon/site.webmanifest" />
+        <!-- Primary Meta Tags -->
+        <title>iPrefer - Simplify your choices</title>
+        <meta name="title" content="iPrefer - Simplify your choices" />
+        <meta
+            name="description"
+            content="Easily compare options and make your choice with iPrefer."
+        />
 
-		<!-- Open Graph / Facebook -->
-		<meta property="og:type" content="website" />
-		<meta
-			property="og:url"
-			content="https://chhaymatt.github.io/iPrefer/" />
-		<meta property="og:title" content="iPrefer - Simplify your choices" />
-		<meta
-			property="og:description"
-			content="Easily compare options and make your choice with iPrefer." />
-		<meta property="og:image" content="https://i.imgur.com/kRyTJvI.png" />
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website" />
+        <meta
+            property="og:url"
+            content="https://chhaymatt.github.io/iPrefer/"
+        />
+        <meta property="og:title" content="iPrefer - Simplify your choices" />
+        <meta
+            property="og:description"
+            content="Easily compare options and make your choice with iPrefer."
+        />
+        <meta property="og:image" content="https://i.imgur.com/kRyTJvI.png" />
 
-		<!-- Twitter -->
-		<meta property="twitter:card" content="summary_large_image" />
-		<meta
-			property="twitter:url"
-			content="https://chhaymatt.github.io/iPrefer/" />
-		<meta
-			property="twitter:title"
-			content="iPrefer - Simplify your choices" />
-		<meta
-			property="twitter:description"
-			content="Easily compare options and make your choice with iPrefer." />
-		<meta
-			property="twitter:image"
-			content="https://i.imgur.com/kRyTJvI.png" />
-	</head>
-	<body>
-		<div id="root"></div>
-		<script type="module" src="/src/main.tsx"></script>
-	</body>
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta
+            property="twitter:url"
+            content="https://chhaymatt.github.io/iPrefer/"
+        />
+        <meta
+            property="twitter:title"
+            content="iPrefer - Simplify your choices"
+        />
+        <meta
+            property="twitter:description"
+            content="Easily compare options and make your choice with iPrefer."
+        />
+        <meta
+            property="twitter:image"
+            content="https://i.imgur.com/kRyTJvI.png"
+        />
+        <!-- Font Awesome -->
+        <script
+            src="https://kit.fontawesome.com/c3aaf1830b.js"
+            crossorigin="anonymous"
+        ></script>
+    </head>
+    <body>
+        <div id="root"></div>
+        <script type="module" src="/src/main.tsx"></script>
+    </body>
 </html>
